fixed header alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,8 @@
   .flex-container {
     display: flex;
     flex-direction: column;
+    width: 100%;
+    height: 100%;
   }
   
   /* this selector selects all divs inside of .flex-container */
@@ -20,25 +22,35 @@
   .first {
     color: #F9FAF8;
     background: #1F2937;
+    width: 100%;
+    height: 25%
   }
 
   .header {
     flex-direction: row;
     background: #1F2937;
+    height: 25px;
+    
   }
 
   .logo {
-    width: 350px;
+    width: 270px;
     background: #1F2937;
+    float: left;
+    height: 25px;
+
   }
 
   .links {
     width: 350px;
     background: #1F2937;
+    float: right;
+    height: 25px;
+    
   }
 
   .main {
-    background: #1F2937;
+    background: #1F2937;   
   }
 
   .button {
@@ -52,16 +64,18 @@
     border-radius: 5px;
   }
 
- 
-
   .second {
-    
+    height: 25%;
+    width: 100%;
   }
 
   .third {
     background-color: #E5E7EB;
+    height: 25%;
+    width: 100%;
   }
 
   .fourth {
-    
+    height: 25%;
+    width: 100%;
   }
